Include a vector logo.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,7 @@
 ---
+/**
+ * Global site header.
+ */
 import { GITHUB_URL, DOCUMENTATION_URL } from "../config"
 import { MagnifyingGlassIcon } from "@heroicons/react/24/solid/index.js"
 ---
@@ -6,11 +9,7 @@ import { MagnifyingGlassIcon } from "@heroicons/react/24/solid/index.js"
 <header class="w-full p-8">
   <nav class="flex justify-between max-w-4xl mx-auto">
     <a href="/" class="relative -ml-2">
-      <img
-        class="h-8 w-auto sm:h-10"
-        src="https://ddev.readthedocs.io/en/stable/developers/logos/1x/Logo_w_text.png"
-        alt=""
-      />
+      <img class="h-8 w-auto sm:h-10" src="/logos/ddev.svg" alt="DDEV logo" />
     </a>
     <div class="w-2/3 flex justify-end">
       <ul class="flex">
