Tidy and comment.

--- a/src/components/AppLogos.astro
+++ b/src/components/AppLogos.astro
@@ -1,4 +1,7 @@
 ---
+/**
+ * Supported framework names and logos used on the homepage.
+ */
 const logos = [
   { name: "Drupal", src: "/logos/drupal.svg", extraClasses: [] },
   { name: "WordPress", src: "/logos/wordpress.svg", extraClasses: [] },
