--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -1,4 +1,8 @@
 ---
+/**
+ * Benefit breakdown used on the homepage.
+ */
+
 import { CheckIcon } from "@heroicons/react/24/solid/index.js"
 
 const features = [
