--- a/src/components/BlogFeatures.astro
+++ b/src/components/BlogFeatures.astro
@@ -1,4 +1,8 @@
 ---
+/**
+ * Cards for the three most recent blog posts, shown on the homepage.
+ */
+
 import { getRecentBlogPosts, formatDate, getReadTime } from "../lib/api"
 
 import BlogPostCard from "./BlogPostCard.astro"
