--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -1,4 +1,7 @@
 ---
+/**
+ * A single card used to represent a blog post. Should probably be placed in a flex grid.
+ */
 export interface Props {
   post: object
 }
