--- a/src/components/FeaturedRepos.astro
+++ b/src/components/FeaturedRepos.astro
@@ -1,4 +1,7 @@
 ---
+/**
+ * Featured repository cards used on the homepage.
+ */
 import { GITHUB_REPO } from "../config"
 import RepoCard from "./RepoCard.astro"
 
