--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,7 @@
 ---
+/**
+ * The large, leading copy and image used on the homepage.
+ */
 import CtaButton from "../components/CtaButton.astro"
 ---
 
