--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -1,4 +1,7 @@
 ---
+/**
+ * A weird little component for grabbing SVGs by name, used in a few different places.
+ */
 export interface Props {
   name:
     | "GitHub"
