--- a/src/components/OsPicker.astro
+++ b/src/components/OsPicker.astro
@@ -3,6 +3,8 @@
  * Provides a styled input for choosing “Mac”, “Windows”, or “Linux” and attempts
  * to toggle corresponding content elements having `data-os="mac"`, `data-os="windows"`,
  * or `data-os="linux"`.
+ *
+ * Used on the “Get Started with DDEV” page.
  */
 
 import Icon from "./Icon.astro"
