--- a/src/components/PostBody.astro
+++ b/src/components/PostBody.astro
@@ -1,8 +1,9 @@
 ---
+/**
+ * A wrapper that adds `.prose` for post content.
+ */
 ---
 
 <div class="prose">
   <slot />
 </div>
-
-<style is:global></style>
