--- a/src/components/CtaButton.astro
+++ b/src/components/CtaButton.astro
@@ -3,6 +3,7 @@ export interface Props {
   text: string
   href: string
   type?: string
+  target?: string
 }
 
 const typeClasses = {
@@ -10,13 +11,14 @@ const typeClasses = {
   hollow: `border border-blue-600 text-blue-600 hover:border-blue-700 hover:text-blue-700`,
 }
 
-const { text, href, type = "default" } = Astro.props
+const { text, href, type = "default", target } = Astro.props
 ---
 
 <a
   href={href}
   class={`w-full mx-2 flex items-center justify-center px-8 py-3 text-base font-medium rounded-md md:py-4 md:text-lg md:px-10 ` +
     typeClasses[type]}
+  target={target}
 >
   {text}
 </a>
