--- a/src/components/Contributors.astro
+++ b/src/components/Contributors.astro
@@ -1,67 +1,8 @@
 ---
-import { GITHUB_REPO } from "../config"
+import { getContributors } from "../lib/api.js"
 import Sponsors from "./Sponsors.astro"
 
-let page = 1
-let contributors = []
-const limit = 100
-
-/**
- * Fetches GitHub contributors and continues through pagination.
- *
- * Careful running this too many times locally since you’ll quickly burn up non-auth rate limits!
- *
- * https://docs.astro.build/en/guides/data-fetching/
- * https://docs.github.com/en/rest/repos/repos?apiVersion=2022-11-28#list-repository-contributors
- */
-async function fetchContributors(
-  progress,
-  url = `https://api.github.com/repos/${GITHUB_REPO}/contributors?per_page=${limit}`,
-  collectedContributors = []
-) {
-  return new Promise((resolve, reject) =>
-    fetch(url)
-      .then((response) => {
-        if (response.status !== 200) {
-          throw `${response.status}: ${response.statusText}`
-        }
-        response
-          .json()
-          .then((data) => {
-            collectedContributors = collectedContributors.concat(data)
-            page++
-
-            if (data.length == limit) {
-              progress && progress(contributors)
-              fetchContributors(
-                progress,
-                `https://api.github.com/repos/${GITHUB_REPO}/contributors?per_page=${limit}&page=${page}`,
-                collectedContributors
-              )
-                .then(resolve)
-                .catch(reject)
-            } else {
-              resolve(collectedContributors)
-            }
-          })
-          .catch(reject)
-      })
-      .catch(reject)
-  )
-}
-
-const progressCallback = (collectedContributors) => {
-  console.log(`${collectedContributors.length} contributors loaded.`)
-}
-
-await fetchContributors(progressCallback)
-  .then((collectedContributors) => {
-    contributors = collectedContributors
-    console.log(
-      `Finished loading ${collectedContributors.length} contributors.`
-    )
-  })
-  .catch(console.error)
+const contributors = await getContributors()
 ---
 
 <div class="relative mt-36 mb-24 px-8">
