--- a/src/components/RepoCard.astro
+++ b/src/components/RepoCard.astro
@@ -1,5 +1,10 @@
 ---
+/**
+ * A single card used for displaying repository details, including
+ * auto-fetched stargazer count.
+ */
 import { StarIcon } from "@heroicons/react/24/outline/index.js"
+import { getRepoDetails } from "../lib/api"
 
 export interface Props {
   name: string
@@ -8,9 +13,7 @@ export interface Props {
 
 const { name, description } = Astro.props
 
-// https://docs.github.com/en/rest/repos/repos?apiVersion=2022-11-28#get-a-repository
-const response = await fetch(`https://api.github.com/repos/${name}`)
-const data = await response.json()
+const repoData = await getRepoDetails(name)
 ---
 
 <a
@@ -25,7 +28,7 @@ const data = await response.json()
           className="w-4 h-4 inline-block relative"
           style={{ top: "-1px" }}
         />{" "}
-        {parseInt(data.stargazers_count).toLocaleString("en-US")}
+        {parseInt(repoData.stargazers_count).toLocaleString("en-US")}
       </div>
     </div>
     <p class="mt-2 text-sm opacity-50 px-3 pt-1 pb-4">
