--- a/src/components/Terminal.astro
+++ b/src/components/Terminal.astro
@@ -3,6 +3,23 @@
  * This is a visual wrapper that puts simple terminal GUI around a code block
  * to help convey that it’s depicting a terminal session and not code.
  */
+
+import {
+  XMarkIcon,
+  MinusIcon,
+  StopIcon,
+} from "@heroicons/react/24/outline/index.js"
+
+export interface Props {
+  type?:
+    | "default"
+    | "powershell"
+    | "admin-powershell"
+    | "windows-terminal"
+    | "ubuntu"
+}
+
+const { type = "default" } = Astro.props
 ---
 
 <style is:global lang="postcss">
@@ -11,16 +28,30 @@
     background: #2e3440;
   }
 
+  .terminal-wrapper .top-bar {
+    &.powershell {
+      @apply justify-end text-white;
+      background: #1F2023;
+    }
+  }
+
   .prose .terminal-wrapper pre {
     @apply my-0;
   }
 </style>
 
 <div class="terminal-wrapper">
-  <div class="top-bar flex p-3 space-x-2">
-    <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
-    <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
-    <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
+  <div class={`top-bar flex p-3 space-x-2 rounded-t-lg ${type}`}>
+    {type == "default" && (
+      <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
+      <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
+      <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
+    )}
+    {type == "powershell" && (
+      <div class="block w-3 h-3"><MinusIcon /></div>
+      <div class="block w-3 h-3"><StopIcon /></div>
+      <div class="block w-3 h-3"><XMarkIcon /></div>
+    )}
   </div>
   <div class="overflow-hidden my-0">
     <slot />
