--- a/src/components/Terminal.astro
+++ b/src/components/Terminal.astro
@@ -4,6 +4,8 @@
  * to help convey that it’s depicting a terminal session and not code.
  */
 
+// TODO: for PowerShell variant, use icon to indicate Windows PowerShell vs. Command Prompt vs. Ubuntu
+
 import {
   XMarkIcon,
   MinusIcon,
