--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -441,7 +441,7 @@ const latestRelease = await getLatestReleaseVersion()
           <Fragment slot="panel-4">
             <div class="prose py-5">
               <p>
-                Use <code>yay</code> or your favorite AUR tool to install the <a
+                Use your favorite AUR tool to install the <a
                   href="https://aur.archlinux.org/packages/ddev-bin/"
                   target="_blank">ddev-bin</a
                 > package, then run <code>mkcert</code>.
