--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -9,7 +9,7 @@ import { getLatestReleaseVersion } from "../lib/api"
 
 import "../styles/tabs.css"
 
-const title = "Get Started with DDEV"
+const title = "Get Started"
 const codeTheme = "nord"
 const latestRelease = await getLatestReleaseVersion()
 ---
