--- a/src/components/Contributors.astro
+++ b/src/components/Contributors.astro
@@ -1,6 +1,7 @@
 ---
 import { getContributors } from "../lib/api.js"
 import Sponsors from "./Sponsors.astro"
+import FeaturedSponsors from "./FeaturedSponsors.astro"
 
 const contributors = await getContributors()
 ---
@@ -9,12 +10,12 @@ const contributors = await getContributors()
   <div class="relative max-w-5xl mx-auto">
     <div class="text-center mb-12">
       <h2 class="text-3xl font-bold text-gray-900 sm:text-4xl">
-        Our Wonderful GitHub Supporters
+        Our Wonderful Supporters
       </h2>
     </div>
 
     <h3 class="text-base font-mono text-navy-300 text-center mb-8">
-      Contributors
+      GitHub Contributors
     </h3>
     <div class="max-w-5xl mx-auto flex flex-wrap justify-center">
       {
@@ -31,8 +32,15 @@ const contributors = await getContributors()
       }
     </div>
 
-    <h3 class="mt-12 mb-8 text-base font-mono text-navy-300 text-center">
-      Sponsors
+    <h3 class="mt-24 mb-8 text-base font-mono text-navy-300 text-center">
+      Featured Sponsors
+    </h3>
+    <div class="max-w-4xl mx-auto flex flex-wrap justify-center">
+      <FeaturedSponsors />
+    </div>
+
+    <h3 class="mt-24 mb-8 text-base font-mono text-navy-300 text-center">
+      GitHub Sponsors
     </h3>
     <div class="max-w-4xl mx-auto flex flex-wrap justify-center">
       <Sponsors size="large" align="center" />
