--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -8,6 +8,7 @@ import {
 import Layout from "../../layouts/Layout.astro"
 import PostBody from "../../components/PostBody.astro"
 import Heading from "../../components/Heading.astro"
+import BlogPostFooter from "../../components/BlogPostFooter.astro"
 
 /**
  * Tell Astro to build routes for individual blog posts.
@@ -42,4 +43,5 @@ const author = page.author.node
       <div set:html={page.content} />
     </PostBody>
   </main>
+  <BlogPostFooter slug={slug} />
 </Layout>
